--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
-    root /appdata/www/public;
+    root /var/www/public;
     client_max_body_size 20M;
 
     location / {
