--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,7 +1,7 @@
 ARG NGINX_VERSION
 FROM nginx:${NGINX_VERSION}
 
-ARG UID
-RUN adduser -u $UID --disabled-password --gecos "" appuser
+ARG USER_ID
+RUN adduser -u $USER_ID --disabled-password --gecos "" appuser
 
 COPY default.conf /etc/nginx/conf.d/
