--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,8 +1,8 @@
 ARG PHP_VERSION
 FROM php:${PHP_VERSION}-fpm
 
-ARG UID
-RUN adduser -u $UID --disabled-password --gecos "" appuser
+ARG USER_ID
+RUN adduser -u $USER_ID --disabled-password --gecos "" appuser
 RUN mkdir /home/appuser/.ssh
 RUN chown -R appuser:appuser /home/appuser/
 RUN echo "StrictHostKeyChecking no" >> /home/appuser/.ssh/config
@@ -22,23 +22,18 @@ RUN apt-get update && apt-get install -y \
     libicu-dev
 
 #EXTENSIONS
-RUN docker-php-ext-install pdo_mysql exif pcntl
-RUN docker-php-ext-configure gd
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install opcache
-RUN docker-php-ext-configure intl
-
-#COMPOSER
-RUN curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer
+# https://github.com/mlocati/docker-php-extension-installer
+RUN curl -sSLf -o /usr/local/bin/install-php-extensions https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions \
+		&& chmod +x /usr/local/bin/install-php-extensions
+RUN install-php-extensions gd opcache intl pdo_mysql exif pcntl @composer
 
 ###XDEBUG
-RUN pecl install xdebug && docker-php-ext-enable xdebug
+RUN install-php-extensions xdebug
+#RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 #SYMFONY CLI
-RUN echo "export COLUMNS=300" >> /home/appuser/.bashrc
-RUN echo "alias sf='/usr/local/bin/php /var/www/bin/console'" >> /home/appuser/.bashrc
-RUN curl -sS https://get.symfony.com/cli/installer | bash && mv /root/.symfony/bin/symfony /usr/local/bin/symfony
-#RUN symfony check:requirements
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/symfony/stable/setup.deb.sh' | bash
+RUN apt install symfony-cli
 
 #INSTALL SYMFONY
 RUN mkdir -p /var/www
